--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="mission-card scroll-fade">
                     <h3>Misi</h3>
                     <ul>
-                        <li>Menegakkan nilai-nilai keislaman dan kekeluargaan dalam setiap interaksi warga.</li>
+                        <li>Menegakkan nilai-nilai Ketuhanan dan kekeluargaan dalam setiap interaksi warga.</li>
                         <li>Menciptakan lingkungan yang bersih, asri, dan teratur dengan pengelolaan fasilitas yang profesional.</li>
                         <li>Menjaga keamanan dan ketertiban lingkungan melalui partisipasi aktif seluruh warga.</li>
                         <li>Membangun komunikasi yang transparan dan efektif antara pengurus dan warga.</li>
@@ -108,7 +108,7 @@
                         <div class="announcement-date">Minggu Ini</div>
                     </div>
                     <h3>Jadwal Ronda Malam</h3>
-                    <p>Minggu ini giliran **Blok B dan C** untuk ronda malam (22:00 - 03:30). Selanjutnya Blok D, kemudian Blok E, dan terakhir Blok A. Mari jaga keamanan bersama!</p>
+                    <p>Minggu ini (7 Agustus) giliran **Blok B dan C** untuk ronda malam (22:00 - 03:30). Selanjutnya Blok D, kemudian Blok E, dan terakhir Blok A. Mari jaga keamanan bersama!</p>
                 </div>
                 <div class="announcement-card scroll-fade">
                     <div class="announcement-header">
@@ -311,9 +311,9 @@
             </div>
             <div class="financial-card scroll-fade">
                 <h3>Laporan Keuangan Terbuka</h3>
-                <p>Akses laporan pemasukan dan pengeluaran kas perumahan secara real-time di bawah ini. Untuk tampilan yang lebih baik, Anda dapat membukanya di tab baru.</p>
+                <p>Akses laporan pemasukan dan pengeluaran kas perumahan secara real-time di bawah ini. Untuk tampilan jurnal transaksi, Anda dapat membukanya di tab baru.</p>
                 <iframe style="width: 100%; height: 500px; border: none; border-radius: 15px; margin-top: 1.5rem;" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSbsAg14hr92AiedTDUV_2I9DRfHFXzla-B7X_j1fdKYLp1RBbnEzfAoNduW5oYHWfzY3eDqSrZAIGL/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSbsAg14hr92AiedTDUV_2I9DRfHFXzla-B7X_j1fdKYLp1RBbnEzfAoNduW5oYHWfzY3eDqSrZAIGL/pubhtml?gid=1729858362&single=true" target="_blank" class="btn-primary" style="margin-top: 1.5rem;">Buka Laporan di Tab Baru</a>
+                <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSbsAg14hr92AiedTDUV_2I9DRfHFXzla-B7X_j1fdKYLp1RBbnEzfAoNduW5oYHWfzY3eDqSrZAIGL/pubhtml?gid=1729858362&single=true" target="_blank" class="btn-primary" style="margin-top: 1.5rem;">Buka Jurnal di Tab Baru</a>
             </div>
         </div>
     </section>
