--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                         <div class="announcement-badge urgent">PENTING</div>
                         <div class="announcement-date">10 Agustus 2025</div>
                     </div>
-                    <h3>Kerja Bakti Persiapan Lomba Agustusan</h3>
-                    <p>Seluruh warga diharapkan berpartisipasi dalam kerja bakti untuk persiapan lomba 17 Agustusan. Kegiatan dimulai pukul 07:00 WIB. Mari bersama-sama mempersiapkan perumahan kita untuk menyambut hari kemerdekaan!</p>
+                    <h3>Kerja Bakti Membersihakan Saluran Air</h3>
+                    <p>Seluruh warga diharapkan berpartisipasi dalam kerja bakti untuk membersihkan saluran irigasi Kegiatan dimulai pukul 07:00 WIB. Mari bersama-sama mempersiapkan perumahan kita untuk menyambut hari kemerdekaan!</p>
                 </div>
                 <div class="announcement-card scroll-fade">
                     <div class="announcement-header">
@@ -108,7 +108,7 @@
                         <div class="announcement-date">Minggu Ini</div>
                     </div>
                     <h3>Jadwal Ronda Malam</h3>
-                    <p>Minggu ini (7 Agustus) giliran **Blok B dan C** untuk ronda malam (22:00 - 03:30). Selanjutnya Blok D, kemudian Blok E, dan terakhir Blok A. Mari jaga keamanan bersama!</p>
+                    <p>Minggu ini (16 Agustus) giliran **Blok D** untuk ronda malam (22:00 - 03:30). Selanjutnya Blok E, kemudian Blok A, Mari jaga keamanan bersama!</p>
                 </div>
                 <div class="announcement-card scroll-fade">
                     <div class="announcement-header">
